<resources>
    <string name="app_name">QuizzApp</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="passwf">Password:</string>
    <string name="log">Log in</string>
    <string name="title_activity_main_menus">MainMenusActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="booki">BookI</string>
    <string name="welcome_back">Welcome</string>
    <string name="skip">Skip</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="forget_password">Forget Password?</string>
    <string name="author">to QuizApp by Maciej Andrysiak</string>


    <string name="tile_New_Game">New Game</string>
    <string name="tile_Rewards">Rewards</string>
    <string name="tile_Questions">Questions</string>
    <string name="tile_Rankings">Rankings</string>

    <string name="tile_New_Game_desc">Play The Game!</string>
    <string name="tile_Rewards_desc">Check your rewards!</string>
    <string name="tile_Questions_desc">Manage questions!</string>
    <string name="tile_Rankings_desc">Check your position in rankings!</string>
    <string name="round">Round</string>
</resources>
